# conveyor-sorting-twin

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  verify.yml
adr/: 0001-phase0-architecture-and-modbus-topology.md  0002-minimal-modbus-implementation-and-soft-plc-stub.md  0003-phase1-scene-adapter-and-mvp-cell.md  0004-estop-failsafe-and-tag-inversion.md  0005-multi-parcel-destination-tracking.md  0006-opcua-adapter.md  0007-mqtt-telemetry.md  0008-modbus-robustness.md  0009-live-hmi-websocket.md  README.md
apps/web-console/: README.md
deployment/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  FAULT_SCENARIOS.md  GODOT_SCENE.md  PERFORMANCE.md  PHASE0.md  ROADMAP.md  SCENARIOS.md  TAG_MAP_MVP.md  TRAINER_GUIDE.md
hmi/fuxa/: INTEGRATION.md  README.md  openlogitwin_project.json  tag_list_sorting_cell_mvp.csv
openlogitwin/: __init__.py  __main__.py  cli.py
plc/: control_logic.py  control_logic_advanced.py  control_logic_mvp.py  soft_plc.py
plc/examples/: 01_basic_conveyor_latch.st  02_sorting_cell_mvp.st  03_sorting_cell_commissioning.st  README.md
protocol-gateway/: README.md  gateway.py  modbus_tcp.py  protocol_factory.py  tag_registry.py
protocol-gateway/adapters/: __init__.py  mqtt_stub.py  opcua_adapter.py  opcua_stub.py  pymodbus_adapter.py
protocol-gateway/config/: tags.conveyor_sorting_cell.json  tags.sorting_cell_advanced.json  tags.sorting_cell_mvp.json
protocol-gateway/schema/: tag_registry.schema.json
scenarios/: back_to_back_sort.json  barcode_routing.json  barcode_sorting_basic.json  dense_sort_advanced.json  estop_during_divert.json  estop_during_run.json  jam_recovery_basic.json  motor_never_starts.json  rapid_jam_reset.json  schema.json  stop_button_basic.json  two_jams.json
scripts/: export_trace.py  generate_demo_report.py  generate_fuxa_project.py  generate_fuxa_view.py  generate_hmi_tag_list.py  hmi_server.py  run_demo.py  run_full_demo.py  run_scenario.py  run_soft_plc.py  run_tests.py  scenario_manager.py  start.py  verify_phase_0.ps1  verify_phase_0.sh
simulation/: barcode.py  cell_sim.py  scenario_runner.py  scene_model.py
simulation/godot-project/: README.md  cell.gd  cell.tscn  cell_bridge.gd  modbus_client.gd  project.godot
sprints/: SPRINT_BACKLOG.md
telemetry/: README.md  SCHEMA.md  mqtt_publisher.py  telemetry_logger.py
tests/: conftest.py  test_advanced_cell.py  test_barcode.py  test_cli.py  test_control_logic_mvp.py  test_demo_report.py  test_deployment.py  test_estop_failsafe.py  test_fuxa_project.py  test_fuxa_view.py  test_godot_project.py  test_hmi_server.py  test_hmi_tag_list.py  test_launcher.py  test_modbus_protocol.py  test_modbus_robustness.py  test_mqtt_telemetry.py  test_multi_parcel_prototype.py  test_opcua_adapter.py  test_opcua_full_loop.py  test_openplc_behavioral.py  test_openplc_integration.py  test_packaging.py  test_pages_landing.py  test_performance.py  test_phase2_scenarios.py  test_phase_gates.py  test_pymodbus_adapter.py  test_scenario_schema.py  test_st_examples.py  test_trace_export.py  test_web_hmi.py  verify_phase0.py  verify_phase1.py
web/: index.html
web/hmi/: README.md  hmi.css  hmi.js  index.html
