[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openlogitwin"
version = "0.6.0"
description = "OpenLogiTwin — conveyor sorting cell digital twin (intralogistics PLC training / virtual commissioning)"
requires-python = ">=3.9"
# Phase 0 and Phase 1 require NO third-party runtime dependencies (stdlib only).
dependencies = []

[project.optional-dependencies]
# Installed only for the hardening track (Phase 1.5+); not needed to run/verify Phase 0/1.
dev = [
  "pytest>=7",        # Phase 1.5e: pytest migration
  "jsonschema>=4",    # optional formal schema validation
  "pymodbus>=3.6",    # Phase 2: pymodbus adapter (kept alongside the in-repo Modbus)
  "asyncua>=1.0",     # Phase 2: OPC UA adapter (second protocol priority)
  "paho-mqtt>=1.6",   # Phase 2/3: MQTT telemetry publisher (third protocol priority)
]

# Tested on Python 3.9, 3.11, 3.13 (see .github/workflows/verify.yml).

[project.scripts]
# Console entry point for editable / source installs (`pip install -e .` from a clone).
# A self-contained PyPI wheel that bundles the source dirs under the package is future work (V5.5).
openlogitwin = "openlogitwin.cli:main"

[tool.setuptools]
# The runtime lives in the repo's (hyphenated, non-importable) source dirs; the only Python
# package is the thin `openlogitwin` CLI front door — don't let setuptools auto-discover the rest.
packages = ["openlogitwin"]

[tool.pytest.ini_options]
# `pytest tests/` collects test_*.py (incl. test_phase_gates.py, which runs the
# verify_phase0/1 gates). The standalone runner `python scripts/run_tests.py`
# is the zero-dependency equivalent used in CI.
testpaths = ["tests"]
python_files = ["test_*.py"]
